--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "vue-cli-plugin-rishiqing",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "vue-cli 3.0 plugin for rishiqing",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "qinyang912",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "require-all": "3.0.0",
+    "memory-fs": "0.4.1"
+  }
 }
